--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="brand">
         <div class="logo" aria-hidden="true">HS</div>
         <div>
-          <div class="title">Hamsa Sarees</div>
+          <div class="title">Hamsa Sarees<br> ! This Site Is Under Construction !</div>
           <div class="small">Handpicked • Ethnic • Quality</div>
         </div>
       </div>
