--- a/payment.html
+++ b/payment.html
@@ -273,8 +273,8 @@
       // Format the message
       const message = `I want cash on delivery option for my order, my name is ${orderData.name} my product is ${orderData.product}, proceed to send entries to sheet`;
       
-      // WhatsApp Business number
-      const phoneNumber = '9994051579';
+      // WhatsApp number
+      const phoneNumber = '919994051579';
       
       // Encode message for URL
       const encodedMessage = encodeURIComponent(message);
