--- a/yourorders.html
+++ b/yourorders.html
@@ -14,31 +14,38 @@
   html,body{height:100%;margin:0;font-family:Inter,system-ui,Arial,sans-serif;background:linear-gradient(180deg,var(--bg1),var(--bg2));color:#eaf6ff;-webkit-font-smoothing:antialiased}
   a{color:inherit;text-decoration:none}
   .container{max-width:1100px;margin:20px auto;padding:0 16px}
-  header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:12px}
+  header{display:flex;align-items:center;justify-content:space-between;gap:12px;padding:12px;background:rgba(255,255,255,0.01);border-radius:12px;margin-bottom:20px}
   .brand{display:flex;gap:12px;align-items:center}
   .logo{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),var(--accent2));display:flex;align-items:center;justify-content:center;font-weight:800;color:#032033;box-shadow:0 12px 40px rgba(0,170,255,0.12)}
-  .title{font-weight:800}
+  .title{font-weight:800;font-size:18px;line-height:1.2}
   .actions{display:flex;gap:8px;align-items:center}
   .btn{cursor:pointer;border-radius:10px;padding:9px 14px;border:none;font-weight:700;background:linear-gradient(90deg,var(--accent),#ff5aa3);color:#fff;box-shadow:0 8px 24px rgba(0,170,255,0.12);transition:transform .15s,filter .15s}
   .btn:active{transform:translateY(1px)}
-  .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff;padding:8px 12px;border-radius:10px}
-  .small{color:var(--muted)}
+  .btn:disabled{opacity:0.6;cursor:not-allowed}
+  .btn-ghost{background:transparent;border:1px solid rgba(255,255,255,0.06);color:#fff;padding:8px 12px;border-radius:10px;cursor:pointer;font-weight:600}
+  .btn-ghost:hover{background:rgba(255,255,255,0.05)}
+  .small{color:var(--muted);font-size:14px}
+  main h1{font-size:28px;margin-bottom:8px}
   .order-card{background:linear-gradient(180deg,#071522,#06121a);padding:16px;border-radius:12px;margin-bottom:12px;border:1px solid rgba(255,255,255,0.03);transition:transform .2s,box-shadow .2s}
-  .order-card:hover{transform:translateY(-4px);box-shadow:0 16px 40px rgba(2,6,23,0.4)}
-  .order-card-header{display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:12px}
+  .order-card:hover{transform:translateY(-4px);box-shadow:0 16px 40px rgba(0,170,255,0.15)}
+  .order-card-header{display:flex;justify-content:space-between;align-items:flex-start;margin-bottom:12px;gap:12px}
   .order-info{flex:1}
-  .order-info strong{color:#eaf6ff;display:block;margin-bottom:6px}
-  .order-info div{margin-bottom:4px}
+  .order-info strong{color:#eaf6ff;display:block;margin-bottom:6px;font-size:16px}
+  .order-info div{margin-bottom:4px;font-size:14px}
   .order-actions{display:flex;gap:8px;flex-direction:column}
-  .toast{position:fixed;right:16px;bottom:16px;background:#0b1220;padding:10px 14px;border-radius:10px;color:#d1fae5;border-left:4px solid var(--success);box-shadow:0 8px 30px rgba(2,6,23,0.6);display:none}
+  .toast{position:fixed;right:16px;bottom:16px;background:#0b1220;padding:10px 14px;border-radius:10px;color:#d1fae5;border-left:4px solid var(--success);box-shadow:0 8px 30px rgba(2,6,23,0.6);display:none;z-index:2000;font-weight:600}
   .modal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:linear-gradient(180deg,rgba(3,8,20,0.6),rgba(2,8,18,0.85));z-index:1200;padding:12px}
   .modal.show{display:flex}
-  .modal-box{max-width:720px;width:100%;background:linear-gradient(180deg,#071522,#06121a);border-radius:12px;padding:16px;color:#eaf6ff;position:relative;box-shadow:0 30px 80px rgba(2,6,23,0.6)}
-  .close-x{position:absolute;top:12px;right:12px;background:transparent;border:none;color:#ff3b3b;font-weight:800;font-size:18px;cursor:pointer}
+  .modal-box{max-width:720px;width:100%;background:linear-gradient(180deg,#071522,#06121a);border-radius:12px;padding:20px;color:#eaf6ff;position:relative;box-shadow:0 30px 80px rgba(2,6,23,0.6);border:1px solid rgba(255,255,255,0.03);max-height:90vh;overflow-y:auto}
+  .modal-box h2{margin-top:0;margin-bottom:12px;font-size:22px}
+  .close-x{position:absolute;top:12px;right:12px;background:transparent;border:none;color:#ff5aa3;font-weight:800;font-size:18px;cursor:pointer;transition:transform .2s}
+  .close-x:hover{transform:scale(1.2)}
   .sr-only{position:absolute!important;height:1px;width:1px;overflow:hidden;clip:rect(1px,1px,1px,1px);white-space:nowrap}
   button:focus,input:focus,select:focus{outline:3px solid rgba(0,170,255,0.12);outline-offset:3px}
+  footer{text-align:center;padding:18px;color:#9fb8d9;font-size:12px;margin-top:20px;border-top:1px solid rgba(255,255,255,0.06)}
   @media (max-width:640px){
     header{flex-direction:column;align-items:stretch;padding:12px 16px}
+    main h1{font-size:24px}
     .order-card-header{flex-direction:column}
     .order-actions{flex-direction:row}
   }
@@ -261,6 +268,11 @@
   }
 })();
 </script>
+
+
+<footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px">
+  © 2025 Hamsa Sarees , unauthorised use is strictly prohibited  ;  WebSite Designed , Created & Published by Terminal Joint
+</footer>
 
 </body>
 </html>
