--- a/sanju.html
+++ b/sanju.html
@@ -1,3 +1,3 @@
 <html>
-  <h1 href="/https://hamsasarees.github.io/hamsasarees/index.html">tech this</h1>
+  <a href="/https://hamsasarees.github.io/hamsasarees/index.html">tech this</a>
 </html>
