--- a/sanju.html
+++ b/sanju.html
@@ -1,3 +1,3 @@
 <html>
-  <a href="/https://hamsasarees.github.io/hamsasarees/index.html">tech this</a>
+  <a href="hamsasarees.github.io/hamsasarees/index.html">tech this</a>
 </html>
